--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+.interFont {
+    font-family: "Inter", sans-serif;
+}
 
-.poppins {
-    font-family: "Poppins", sans-serif;
+.ralewayFont {
+    font-family: "Raleway", sans-serif;
 }
