--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,15 @@
     font-family: "Raleway", sans-serif;
 }
 
-#displaySeat>li {
-    display: flex;
-}
+
+/* #displaySeat>li>p {
+    font-family: "Raleway", sans-serif;
+    font-size: 600px;
+    color: #03071299;
+} */
+
+/* #displaySeat>li>h4 {
+    font-family: "Raleway", sans-serif;
+    font-size: 600px;
+    color: #03071299;
+} */
